# upstart

./: .bzrignore  Makefile.in  OWNERS  configure  configure.ac  make_pkg.sh
conf/: Makefile.in
contrib/: Makefile.in
dbus/: Makefile.in
debian/: changelog  rules
doc/: Makefile.in
extra/: upstart-socket-bridge.c
extra/man/: socket-event.7
init/: Makefile.am  Makefile.in  conf.c  control.c  environ.c  environ.h  errors.h  event.c  event_operator.c  job.c  job_class.c  job_class.h  job_process.c  main.c  parse_job.c  perf_log.c  perf_log.h  system.c  system.h
init/man/: init.5
init/tests/: test_conf.c  test_event.c  test_event_operator.c  test_job_class.c  test_job_process.c  test_parse_job.c  test_perf_log.c
m4/: Makefile.in  libs.m4
nih/: Makefile.am  Makefile.in  string.c
nih-dbus/: Makefile.am  Makefile.in
nih-dbus-tool/: Makefile.am  Makefile.in
nih/tests/: test_child.c  test_string.c
udev/: Makefile.am  Makefile.in
util/: Makefile.am  Makefile.in
util/man/: initctl.8
